# econ622-project

./: .gitignore  DGP.py  LICENSE  README.md  da.py  notes.md  notes.tex  pyproject.toml  requirements.txt
code (spaghetti)/: DGP.py  comparisons and visualizations.ipynb  mip.py
spaghetti and stuffs/: DGP.py  comps.ipynb  da.py  main.py  sd.py  test_matching.py
