[project]
name = "confusedest-salad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cvxpy[highs,gurobi]>=1.8.2",
    "gurobipy>=11.0.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pytest>=9.0.2",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]
